--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="sample.kingja.rangebarsir.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="sample.kingja.rangebarsir.MainActivity"
+    android:orientation="vertical"
+    android:padding="12dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"/>
+
+    <com.kingja.rangebarsir.RangeBar
+        android:background="#bebebe"
+        app:lineWidth="6dp"
+        app:sliderColor="#453ddc"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
 
 </LinearLayout>
