--- a/rangebarsir/src/main/res/values/attrs.xml
+++ b/rangebarsir/src/main/res/values/attrs.xml
@@ -2,8 +2,14 @@
 <resources>
     <declare-styleable name="RangeBar">
 
-        <attr name="lineWidth" format="dimension"/>
+        <attr name="normalLineWidth" format="dimension"/>
+        <attr name="normalLineColor" format="reference|color"/>
+
+        <attr name="selectedLineWidth" format="dimension"/>
+        <attr name="selectedLineColor" format="reference|color"/>
+
         <attr name="sliderSzie" format="dimension"/>
         <attr name="sliderColor" format="reference|color"/>
+        <attr name="sliderImg" format="reference"/>
     </declare-styleable>
 </resources>
